clang/test/BSC/Negative/Driver/options/std_option/std_option.cbs
// RUN: not %clang_cc1 -x bsc -std=c++11 -verify %s \
// RUN: 2>&1 | FileCheck %s -check-prefix=CHECK-INVALID-OPTION

// CHECK-INVALID-OPTION: (frontend): invalid argument '-std=c++11' not allowed with 'BSC'

struct Foo {
};
int struct Foo::getA(struct Foo* this) { 
    return 1;
}
